<resources>
    <string name="app_name">locateMe</string>
    <string name="locate">Locate</string>
    <string name="here">here.</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full name</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="_7_912_456_7890">+7 912 456 7890</string>
    <string name="john_example_com">john@example.com</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="_8_909_669_6131">8 (999) 669 6131</string>
    <string name="are_you_registered_login">Are you Registered? Login</string>


    <string name="title_activity_main">карта</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_address">Home Address</string>
    <string name="menu_my_circles">My Circles</string>
    <string name="menu_joined_circles">Joined Circles</string>
    <string name="menu_join_circle">Join a Circle</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="google_maps_api">"YOUR_API_TOKEN"</string>
    <string name="MAPBOX_ACCESS_TOKEN">"_MAPBOX_TOKEN"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
