<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Circles">
        <menu>
            <item
                android:id="@+id/nav_my_circle"
                android:icon="@drawable/ic_my_circles"
                android:title="@string/menu_my_circles" />
            <item
                android:id="@+id/nav_joined"
                android:icon="@drawable/ic_joined_circles"
                android:title="@string/menu_joined_circles" />

            <item
                android:id="@+id/nav_joincircle"
                android:icon="@drawable/ic_join"
                android:title="@string/menu_join_circle" />

        </menu>
    </item>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_exit" />
    </group>


</menu>
